--- a/src/common/styles/sass/variables.scss
+++ b/src/common/styles/sass/variables.scss
@@ -1,1 +1,5 @@
-$accentColor: #f26c4f
+$accentColor: rgb(220, 66, 39);
+$backgroundColor1: #020312;
+$backgroundColor2: #0A0C18;
+$backgroundColor3: #212226;
+$backgroundColorHeader: #FFFFFF;
